lab/istio/examples/traffic-management/ingress-gateway/cert-manager/public-ingress-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: public-ingress-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress-istio

  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.silvios.me"

    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ingress-tls
      hosts:
        - "*.silvios.me"
