lab/istio/examples/traffic-management/ingress-gateway/cert-manager/virtualservice-routes-mesh.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-routes-mesh
  namespace: httpbin
spec:
  hosts:
    - httpbin.httpbin.svc.cluster.local

  gateways:
    - mesh

  http:
    - name: httpbin
      headers:
        request:
          add:
            X-A1-origin-2: mesh-ingress-route

      route:
        - destination:
            host: httpbin.httpbin.svc.cluster.local
            port:
              number: 8000
